<resources>
    <string name="app_name">MyUNN Post-Utme</string>
    <string name="title_activity_home_navigation">HomeNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="email_or_phone_number">Enter email</string>
    <string name="password">Enter password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="schoolAnthem">"<u>School Anthem</u>"</string>
    <string name="Read_more">"<u>Read more</u>"</string>
    <string name="Questions">"<u>Study Questions</u>"</string>
    <string name="Questions2">"<u>Study Unn Past Questions</u>"</string>
    <string name="UNN_News">"<u>UNN News</u>"</string>
    <string name="Articles">"<u>Articles</u>"</string>
    <string name="Take_Exam2">"<u>Take CBT Exam</u>"</string>
    <string name="Take_Exam">"<u>Take Exam</u>"</string>
    <string name="Syllabus">"<u>Syllabus</u>"</string>
    <string name="Syllabus2">"<u>Post-Utme Syllabus</u>"</string>
    <string name="Chat_Bot">"<u>Post-utme lesson</u>"</string>
    <string name="Our_Facebook_Group">"<u>Our Facebook Group</u>"</string>
    <string name="Our_Facebook_Group2">"<u>Join Our Facebook Group</u>"</string>
    <string name="About_App">"<u>About App</u>"</string>
    <string name="Rate_Us">"<u>Rate Us</u>"</string>
    <string name="Contact_Us">"<u>Contact Us</u>"</string>
    <string name="account_signup">Don\'t have an account? <u><b>SIGNUP</b></u></string>
    <string name="welcome">Enter your email and password if you have \n created an account already:</string>
    <string name="create_account_with">Create Account:</string>
    <string name="let_s_roll">Let\'s Roll</string>
    <string name="create_an_account">Create an account</string>
    <string name="full_name">Enter Full name</string>
    <string name="email">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_account">Already have an account? <u><b>SIGN IN</b></u></string>
    <string name="enter_otp_code">Enter OTP code</string>
    <string name="resend">Resend</string>
    <string name="back_to_sigup">Back to sigup</string>
    <string name="forget_password_msg">Forget password</string>
    <string name="ok">Ok</string>
    <string name="name_email_com">name@email.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_error_messae">Thanks for noticing we\'re going to fix it up and have things back to normal soon.</string>
    <string name="internet_error">No internet connection</string>
    <string name="chating">Chating</string>
    <string name="select_year">Select year</string>
    <string name="add">Add</string>
    <string name="add_new_subject">Add new Subject</string>
    <string name="add_new_year">Add new year</string>
    <string name="latest_news">Latest News on Allschool</string>
    <string name="study_question">Study Question</string>
    <string name="subject_text">Choose your subject:</string>
    <string name="next">Next</string>
    <string name="search_hint">Search here</string>
    <string name="report">REPORT</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="show_answer">SHOW ANSWER</string>
    <string name="scenario">Scenario</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="answer_explanation">Answer Explanation</string>
    <string name="question_1"><u>Question 1</u></string>
    <string name="ques">"Lorem ipsum dolor sit amet,  consectetuer adipiscing elit, sed  diam nonummy nibh euismod  tincidunt ut laoreet "</string>
    <string name="success">You have successfully complete the examination. Here is your result</string>
    <string name="select_subject">Select subject</string>
    <string name="cancel">Cancel</string>
    <string name="choose_your_anwer">Choose your anwer</string>
    <string name="submit">Submit Answer</string>
    <string name="congratulation">Congratulation !!!</string>
    <string name="out_of">Out of </string>
    <string name="start_exam">START EXAM</string>
    <string name="exam_dutation">Exam Dutation</string>
    <string name="no_of_question">No of Question</string>
    <string name="take_a_custom_exam">Take a custom exam</string>
    <string name="_1_30_minutes">0 hour 00 minutes</string>
    <string name="choose_your_subject">Choose your subject</string>
    <string name="reason_for_report">Reason for report</string>
    <string name="here_your_explaination">here your explaination</string>
    <string name="see_score">See Score</string>
    <string name="type_here">Type Here</string>
    <string name="go_premium">Go Premium</string>
    <string name="select_time">Select time</string>
    <string name="prefex">Hours</string>
    <string name="sufex">minute</string>
    <string name="_0">0</string>
    <string name="get_premium">"<u>Get Premium</u>"</string>
    <string name="unlimited_plan"><u>Basic Plan</u></string>
    <string name="unlimited_planpro"><u>Pro Plan</u></string>
    <string name="p1"># Basic</string>
    <string name="p2"># Pro</string>
    <string name="_1000">₦1000/</string>
    <string name="_2000">₦2000/</string>
    <string name="year">year</string>
    <string name="_months">6 months</string>
    <string name="p1_description">Upgrading to Basic Premium gives you access to:\n\n
    1.Get access to ALL questions and answers. All YEARS. No limit!\n
    2.Get unlimited access to FULL EXAM.\n
    3.Use this App Offline. No data needed to study/answer questions.\n
    4.Get these UNN post utme past questions in PDF. Print them and study at your convenience.\n
    5.Get UNN latest news on WhatsApp and as text message. Be rest assured never to miss any UNN NEWS that affects you. We will be your eyes in UNN.\n
           6.Call/Chat with Admin any time any day and get response almost instantly.\n\n
    We will be your helpful friend.\n
    We will help answer/resolve your questions/issues almost immediately.\n\n
    7.Access our weekly contest without coins.\n
    8.Get access to ALL questions and answers.
 </string>
    <string name="buy_now">PAY NOW</string>
    <string name="mobile_recharge">Recharge Card</string>
    <string name="banking_system">Banking System</string>
    <string name="online_payment">Online Payment</string>
    <string name="p2_description">With this plan, you get everything in BASIC, plus acces to join the UNN POST UTME LESSON</string>
    <string name="total_amount">Total Amount</string>
    <string name="recharge_card_type">recharge card type</string>
    <string name="mtn">MTN</string>
    <string name="pin1">PIN1</string>
    <string name="pin2">PIN2</string>
    <string name="submit1">Submit</string>
    <string name="close">Close</string>
    <string name="fcmlink">https://fcm.googleapis.com</string>
    <string name="CHANNEL_ID">com.iotait.schoolapp</string>
    <string name="CHANNEL_NAME">schoolapp</string>
    <string name="CHANNEL_DESC">schoolapp notification</string>
    <string name="pin3">PIN3</string>
    <string name="pin4">PIN4</string>
    <string name="pin5">PIN5</string>
    <string name="pin6">PIN6</string>
    <string name="pin7">PIN7</string>
    <string name="pin8">PIN8</string>
    <string name="pin9">PIN9</string>
    <string name="pin10">PIN10</string>
    <string name="premium">To access the App in Offline,Please Subscribe Premium Package by clicking below</string>
    <string name="leaderBoard"><u>Leader Board</u></string>
    <string name="db_name">notificationdb</string>
    <string name="add_participants">View Participants</string>
    <string name="add_moderate">Add Moderate</string>
    <string name="learn_more"><u>Learn More.</u></string>
    <string name="app_id">ca-app-pub-3434530710838107~7137651314</string>
    <string name="banner_id">ca-app-pub-3434530710838107/5688838277</string>
    <string name="interstitialad_id">ca-app-pub-3434530710838107/9563476430</string>
    <string name="rewardad_id">ca-app-pub-3434530710838107/1934549228</string>
    <string name="fb_banner_id">304411567192780_364753064491963</string>
    <string name="fb_interstitialad_id">304411567192780_364752497825353</string>
    <string name="fb_rewardad_id">304411567192780_305723443728259</string>
    <string name="unn_post_utme_syllabus_n_see_topics_that_have_been_asked_in_unn_post_utme">UNN Post Utme syllabus</string>
    <string name="appdetails">"  Access UNN post-utme Past Questions, Latest News and More"</string>
    <string name="see_topics_that_have_been_asked_in_unn_post_utme">See topics that have been asked in UNN Post-Utme</string>
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="create_token">Create token</string>
    <string name="no_card_yet">No card yet</string>
    <string name="no_token">No token</string>
    <string name="token_null_message">Token was null</string>
    <string name="token_not_gotten">Unable to get token</string>
    <string name="sample_card">4123450131001381</string>
    <string name="sample_cvv">883</string>
    <string name="sample_month">01</string>
    <string name="sample_year">2020</string>
    <string name="no_transaction_yet">No transaction yet</string>
    <string name="amount_in_kobo">Amount in Kobo</string>
    <string name="okereke_divine_the_admin">Okereke Divine the Admin</string>
    <string name="welcome_message">Hi, Welcome here</string>
    <string name="contact_h1">Did you face any technical issue while using this App? Please feel free to send an email to <b>myunnpostutme@allschool.com.ng</b> Or <b>WhatsApp us on 08093785476</b></string>
    <string name="contact_h2">Please note: We have thousands of messages to respond to. Hence, it might take 2-7days to reply you. However, we give special attention to all our PREMIUM USERS. We answer their questions almost immediately. We urge you to upgrade to Premium now</string>
    <string name="Upgrade_to_Premium">Upgrade to Premium</string>
    <string name="kindly_upgrade_to">Kindly Upgrade to Premium to take the FULL Exam as many times as you want. No limit! Other benefits of being a premium user are:</string>
    <string name="_1_use_this_app_offline">1. Use this App Offline.</string>
    <string name="_2_get_unn_post_utme_past_questions_in_pdf">2. Get UNN post utme past questions in PDF</string>
    <string name="_3_get_unn_latest_news_on_whatsapp_and_as_text_message">3. Get UNN latest news on WhatsApp and as text message</string>
    <string name="_4_call_chat_with">4. Call/Chat with Admin any time any day and get response almost instantly. And lots more!</string>
    <string name="upgrade_to_premium_now">Upgrade to \n Premium Now</string>
    <string name="study_questions">Here you can study all the available UNN Post-UTME Past Questions for both UTME and direct entry candidates. Just select the <b>year</b> and <b>Subject</b> you want to study the questions. \nBy <b>study</b>, we mean you will see the questions, answers and explanations. \n\n
        <b>IMPORTANT: Freemium</b> users can select <b>four</b> different years while <b>Premium</b> users can select all the available years.</string>
    <string name="note">NOTE:</string>
</resources>