<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".ui.homepage.ui.question.QuestionFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_selected_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_drop"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center"
                    android:hint="@string/select_year"
                    android:textSize="@dimen/_16ssp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/toolbarbackground" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/lato_regular"
                android:gravity="left"
                android:text="@string/study_question"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_20ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:fontFamily="@font/lato_regular"
                android:gravity="left"
                android:text="@string/subject_text"
                android:textColor="@color/color_grey"
                android:textSize="@dimen/_16ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_subjectlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/btn_login_bg"
                android:fontFamily="@font/lato_bold"
                android:padding="0dp"
                android:text="@string/next"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_8sdp"/>

            <TextView
                android:id="@+id/text_desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:text="@string/study_questions"/>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit_subject"
        style="@style/SpinKitView.Large.MultiplePulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/include_toolbar"
        app:layout_constraintStart_toStartOf="@+id/nestedScrollView"
        app:layout_constraintTop_toTopOf="@+id/include_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>